src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>ASA_Review__c</fullName>
        <description>The date ASA began reviewing school edits</description>
        <label>ASA Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Aggregator_Group__c</fullName>
        <description>If this account is part of an aggregate sale please fill out which group they belong to.</description>
        <inlineHelpText>If this account is part of an aggregate sale please fill out which group they belong to.</inlineHelpText>
        <label>Aggregator Group</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Aggregator_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Aggregator Name is carried over from the related Opportunity into this Contract.</inlineHelpText>
        <label>Aggregator Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aggregator_discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aggregator Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_Types__c</fullName>
        <label>Agreement Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blanket Guarantee</fullName>
                </value>
                <value>
                    <fullName>CCI</fullName>
                </value>
                <value>
                    <fullName>E-signature Repurchase</fullName>
                </value>
                <value>
                    <fullName>Full Service</fullName>
                </value>
                <value>
                    <fullName>Guarantee-only</fullName>
                </value>
                <value>
                    <fullName>Holder Agreement</fullName>
                </value>
                <value>
                    <fullName>Auto -Renewal</fullName>
                </value>
                <value>
                    <fullName>Conversion to Monthly/Annual</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_Price__c</fullName>
        <label>Base Price</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10,000</fullName>
                </value>
                <value>
                    <fullName>15,000</fullName>
                </value>
                <value>
                    <fullName>25,000</fullName>
                </value>
                <value>
                    <fullName>30,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Termination_Provision__c</fullName>
        <description>Is there a cancellation or termination provision in the contract?  If yes please explain in the Provision Detail field</description>
        <label>Cancellation/Termination Provision?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes (explain below)</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The contact that the contract should go to.</description>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Tel__c</fullName>
        <label>Contact Tel</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contract_Auto_Renewal__c</fullName>
        <description>Does this contract renew automatically?</description>
        <label>Contract Auto-Renewal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Requests__c</fullName>
        <description>Please select all that apply</description>
        <label>Contract Requests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Deferred Payment</fullName>
                </value>
                <value>
                    <fullName>Alternative Payment Schedule</fullName>
                </value>
                <value>
                    <fullName>Training included</fullName>
                </value>
                <value>
                    <fullName>State Contract Required</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Stat__c</fullName>
        <formula>TEXT(Opportunity__r.Contract_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Status_Not_Used__c</fullName>
        <label>Contract Status-Not Used</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proposal Requested</fullName>
                </value>
                <value>
                    <fullName>Contract Requested</fullName>
                </value>
                <value>
                    <fullName>Contract submitted to school</fullName>
                </value>
                <value>
                    <fullName>ASA Review school edits</fullName>
                </value>
                <value>
                    <fullName>School Review ASA edits</fullName>
                </value>
                <value>
                    <fullName>Agreement Executed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Years__c</fullName>
        <label>Contract Years</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>.5</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Frequency__c</fullName>
        <description>Takes the maximum of Invoice Frequency from Contract Lines, required to calculate the Service Period End date on Sales Invoice. - GS Development Team</description>
        <label>Invoice Frequency</label>
        <summarizedField>Contract_Lines__c.Invoice_Freq__c</summarizedField>
        <summaryFilterItems>
            <field>Contract_Lines__c.Unit_Price__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Contract_Lines__c.Contract__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Invoice_has_been_created__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Automatically turned on when invoice has been generated.  Then automatically turned off awaiting next invoice date.</inlineHelpText>
        <label>Invoice has been created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Penalty_Charge__c</fullName>
        <description>Is there a penalty charge for early termination of this contract if so please complete the dollar amount in &quot;Penalty Charge&quot; field (currency)</description>
        <label>Is there a Penalty Charge?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Date_s__c</fullName>
        <description>Any  Key Ticker dates for renewal, rollover, or termination, has a work flow attached</description>
        <label>Key Date(s)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_ASA_Employee_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Legal contract field_ASA_Employee_Info</description>
        <label>ASA Employee Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Contract_Reevaluation__c</fullName>
        <description>Has the contract been reevaluated, if date box is filled then it has.</description>
        <label>Contract Reevaluation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Contract_Restriction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Are there any special restrictions on this contract if so please list them in the description text box.</description>
        <label>Contract Restrictions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Privacy_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>After reveiw of Contract and has been blessed by the Privacy Specilist box should be checked.</description>
        <label>Privacy Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Review_Status__c</fullName>
        <label>Review Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>NPI_Provided__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Waiting Further Review</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Security_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>After contract is blessed by the ISD elcetronic security rep, can be check off.</description>
        <label>Security Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Sensitive_ASA_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sensitive ASA Info.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_approved__c</fullName>
        <label>Legal approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Main_Contact__c</fullName>
        <label>Main Contact</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will the Vendor have access to non public information YES/NO</description>
        <label>NPI Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Invoice_Date__c</fullName>
        <description>Next invoice date on contract header is earliest date on contract line</description>
        <inlineHelpText>Next invoice date on contract header is earliest date on contract line</inlineHelpText>
        <label>Next Invoice Date</label>
        <summarizedField>Contract_Lines__c.Next_Invoice_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Contract_Lines__c.Remaining_Invoices__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Contract_Lines__c.Contract__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Link__c</fullName>
        <description>Shows the link URL to the Opportunity associated to the Contract.</description>
        <inlineHelpText>Shows the link URL to the Opportunity associated to the Contract.</inlineHelpText>
        <label>Opportunity Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is REQUIRED for the School Channel process - if it is left empty the automated Renewal Opportunity porcess will fail to execute.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <description>Misc agreements</description>
        <label>Other</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Penalty_Charge__c</fullName>
        <description>If there is a penalty charge what is the amount</description>
        <label>Penalty Charge</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Periodic_Calc_Descript__c</fullName>
        <description>Describe the calculations of periodic payments including Fees the freguency and timing of payments</description>
        <label>Periodic Calc Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Periodic_Payments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the contract include periodic payments, if so please describe.</description>
        <label>Periodic Payments?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Provision_Detail__c</fullName>
        <description>Explain the Cancellation or Termination Provisions in the contract</description>
        <label>Provision Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ready_to_Create_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Automatically flagged when a contract line reaches it&apos;s Next Invoice Date</inlineHelpText>
        <label>Ready to Create Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remaining_Invoices__c</fullName>
        <description>Takes the maximum of Remaining Invoices from Contract Lines, required to calculate the Service Period End date on Sales Invoice.  - GS Development Team</description>
        <label>Remaining Invoices</label>
        <summarizedField>Contract_Lines__c.Remaining_Invoices__c</summarizedField>
        <summaryFilterItems>
            <field>Contract_Lines__c.Unit_Price__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Contract_Lines__c.Contract__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Renewal_Opportunity_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal Opportunity Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Terms__c</fullName>
        <description>Are there special renewal terms or options associated with this contract?</description>
        <label>Renewal Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_activation_discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal activation discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Auto-populated, shows the last invoice that was created from this Contract</inlineHelpText>
        <label>Sales Invoice</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>School_Review__c</fullName>
        <description>The date the school began reviewing ASA edits</description>
        <label>School Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signed_By__c</fullName>
        <description>Sr. Staff that have signing abilities</description>
        <label>Signed By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clara Serpa</fullName>
                </value>
                <value>
                    <fullName>Debra Chromy</fullName>
                </value>
                <value>
                    <fullName>Janine Greenwood</fullName>
                </value>
                <value>
                    <fullName>Larry O&apos;Connell</fullName>
                </value>
                <value>
                    <fullName>Lauren Rolfe</fullName>
                </value>
                <value>
                    <fullName>Michael Finn</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Paul Combe</fullName>
                </value>
                <value>
                    <fullName>Rick Rindini</fullName>
                </value>
                <value>
                    <fullName>Stephen Wong</fullName>
                </value>
                <value>
                    <fullName>Sue Nathan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signed_Copy_File__c</fullName>
        <label>Signed Copy File</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes (Copy)</fullName>
                </value>
                <value>
                    <fullName>Yes (Original)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_to_School__c</fullName>
        <description>Date the contract was submitted to the school</description>
        <label>Submitted to School</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_of_Contract__c</fullName>
        <description>What is the term of the contracts renewal policy?</description>
        <label>Term of Contract</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto-Renewal (same term)</fullName>
                </value>
                <value>
                    <fullName>Conversion to Monthly</fullName>
                </value>
                <value>
                    <fullName>Conversion to Annual</fullName>
                </value>
                <value>
                    <fullName>Options (explain below)</fullName>
                </value>
                <value>
                    <fullName>Other (explain below)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tracking_2__c</fullName>
        <label>Tracking-2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email (PDF)</fullName>
                </value>
                <value>
                    <fullName>Over-night Mail</fullName>
                </value>
                <value>
                    <fullName>Standard Mail</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tracking_Number2__c</fullName>
        <label>Tracking#-2</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking #</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking__c</fullName>
        <label>Tracking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email (PDF)</fullName>
                </value>
                <value>
                    <fullName>Over-night Mail</fullName>
                </value>
                <value>
                    <fullName>Standard Mail</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>Contracts_Ready_to_Invoice</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Next_Invoice_Date__c</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Ready_to_Create_Invoice__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ready_to_Create_Invoice__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Ready to Create Invoice</label>
    </listViews>
    <listViews>
        <fullName>Contracts_with_Oppty</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTRACT.CREATED_DATE</columns>
        <columns>CONTRACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Contracts with Oppty</label>
    </listViews>
    <listViews>
        <fullName>LenderSetUpStatus</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>notEqual</operation>
            <value>Agreement Execution,Contract Authorized</value>
        </filters>
        <label>Lender Set Up Status</label>
    </listViews>
    <listViews>
        <fullName>LendersinPipeline</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>equals</operation>
            <value>Lender Opportunity</value>
        </filters>
        <label>Lenders in Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>Mycontracts1</fullName>
        <columns>CONTRACT.STATUS_CODE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CONTRACT.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My contracts 1</label>
    </listViews>
    <listViews>
        <fullName>Ready_to_create_Invoices</fullName>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>Ready_to_Create_Invoice__c</columns>
        <columns>Next_Invoice_Date__c</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ready_to_Create_Invoice__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Next_Invoice_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Ready to create Invoices</label>
        <sharedTo>
            <role>TopLevel</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>ContractInternaltoVendor</fullName>
        <active>true</active>
        <description>Use this record for ASA Assosiate contracting with an outside vendor</description>
        <label>Contract - Internal to Vendor</label>
    </recordTypes>
    <recordTypes>
        <fullName>ContractOneTimeNonRenewable</fullName>
        <active>true</active>
        <description>This type for one time contracts i.e. reastaurant, hotel,</description>
        <label>Contract - One Time - Non-Renewable</label>
    </recordTypes>
    <recordTypes>
        <fullName>LenderServicerContract</fullName>
        <active>false</active>
        <description>Contacts for Lender(s) and Servicer(s) used by the Lender Account Executive</description>
        <label>Lender/Servicer Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>School_Contract</fullName>
        <active>true</active>
        <description>SALT Contract</description>
        <label>School Contract</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>